--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body {
     height: 400px;
     width: 100%;
     background-size: cover;
-    background-image: url( "../img/rogamers.png");
+    background-image: url( "../img/rogamers.jpg");
    
 }
 
