--- a/css/main.css
+++ b/css/main.css
@@ -491,6 +491,121 @@ font-size: 14px
     margin-top: 80px;
 }
 
+/*------------------------------------------------------------------ Instagram Feed -------------------------------------------------------------------*/
+ .instagram-box{
+     padding: 70px 0px;
+     background: url(../images/ins-bg.jpg) no-repeat center center;
+     background-size: auto auto;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -ms-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+     position: relative;
+}
+ .instagram-box::before{
+     background: rgba(0,0,0,0.9);
+     width: 100%;
+     height: 100%;
+     left: 0px;
+     top: 0px;
+     content: "" ;
+     position: absolute;
+     z-index: 0;
+}
+ .main-instagram.owl-carousel .owl-nav button.owl-prev{
+     background: #010101;
+    position: absolute;
+     z-index: 1;
+     display: block;
+     margin-top: 90px;
+     border: 1px solid green;
+     height: 20%;
+     width: 50px;
+     line-height: 0px;
+     font-size: 24px;
+     cursor: pointer;
+     color: #ffffff;
+     top: 0;
+     padding: 0;
+     
+     opacity: 1;
+     left: 0px;
+     -webkit-transition: all 0.3s ease;
+     -o-transition: all 0.3s ease;
+     transition: all 0.3s ease;
+}
+ .main-instagram.owl-carousel .owl-nav button.owl-next{
+     background: #010101;
+     position: absolute;
+     z-index: 1;
+     display: block;
+     margin-top: 90px;
+     border: 1px solid green;
+     height: 20%;
+     width: 50px;
+     line-height: 0px;
+     font-size: 24px;
+     cursor: pointer;
+     color: #ffffff;
+     top: 0;
+     padding: 0;
+    
+     opacity: 1;
+     right: 0px;
+     -webkit-transition: all 0.3s ease;
+     -o-transition: all 0.3s ease;
+     transition: all 0.3s ease;
+}
+ .main-instagram.owl-carousel .owl-nav button.owl-next:hover, .main-instagram.owl-carousel .owl-nav button.owl-prev:hover{
+     background: #d33b33;
+}
+ .ins-inner-box{
+     position: relative;
+     
+}
+/*
+.ins-inner-box{
+    
+     
+    width: 200px;
+}
+*/
+ .hov-in{
+     opacity: 0;
+     background: rgba(211,59,51, 0.5);
+     bottom: -100%;
+     position: absolute;
+     width: 100%;
+     height: 100%;
+     -webkit-transition: all 0.3s ease-out 0.5s;
+     -moz-transition: all 0.3s ease-out 0.5s;
+     -o-transition: all 0.3s ease-out 0.5s;
+     -ms-transition: all 0.3s ease-out 0.5s;
+     transition: all 0.3s ease-out 0.5s;
+     text-align: center;
+     display: table;
+}
+ .hov-in a{
+     display: table-cell;
+     vertical-align: middle;
+     height: 100%;
+}
+ .hov-in i{
+     color: #010101;
+     font-size: 48px;
+     position: relative;
+     z-index: 2;
+}
+ .hov-in a i:hover{
+     color: #ffffff;
+}
+ .ins-inner-box:hover .hov-in{
+     bottom: 0;
+     opacity: 1;
+}
+
+
 @media screen and (min-width: 900px) {
 	.right{
     margin-top: 0px;
