--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 }
 .box{
 /*    position: relative;*/
-    
+    background-color:black;
     height: 400px;
     width: 100%;
     background-size: cover;
