--- a/css/main.css
+++ b/css/main.css
@@ -638,6 +638,7 @@ font-size: 14px
         margin-right: 50px;
 	width:400px;
 	 height: 500px;
+	    padding:20px;
 	    flex:1;
     }
 	.testy1 p{
