--- a/css/main.css
+++ b/css/main.css
@@ -635,7 +635,7 @@ font-size: 14px
     
    }
     .testy1{
-        
+/*         margin-top:50px; */
 	width:400px;
 	 min-height:500px;
         height: auto;
