--- a/css/main.css
+++ b/css/main.css
@@ -519,7 +519,8 @@ font-size: 14px
      z-index: 1;
      display: block;
      margin-top: 90px;
-     border: 1px solid green;
+/*      border: 1px solid green; */
+	 border-radius:50%;
      height: 20%;
      width: 50px;
      line-height: 0px;
