--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,12 @@ font-size: 14px
 }
 
 /*------------------------------------------------------------------ Instagram Feed -------------------------------------------------------------------*/
- .instagram-box{
+.instagram{
+    background-color: #242424;
+    color: white;
+    position: relative;
+} 
+.instagram-box{
      padding: 70px 0px;
      background: url(../images/ins-bg.jpg) no-repeat center center;
      background-size: auto auto;
@@ -504,7 +509,6 @@ font-size: 14px
      position: relative;
 }
  .instagram-box::before{
-     background: rgba(0,0,0,0.9);
      width: 100%;
      height: 100%;
      left: 0px;
